added edit book's title and download count